--- a/app/src/main/res/layout/fragment_panorama_share.xml
+++ b/app/src/main/res/layout/fragment_panorama_share.xml
@@ -53,6 +53,14 @@
             app:rightAction="@{shareClick}"
             app:rightEnable="@{uploadSuccess}"
             app:toolbarTitle="@{@string/ShareTo(way)}" />
+        <View
+            android:id="@+id/v_shadow"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/y10"
+            android:background="@drawable/little_shape"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/custom_toolbar" />
 
         <View
             android:id="@+id/shareContentBackGround"
@@ -85,7 +93,6 @@
             android:id="@+id/sharePercent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="20%"
             android:textColor="#FFFFFF"
             android:textSize="@dimen/sp13"
             android:visibility="@{uploadSuccess?View.GONE:View.VISIBLE}"
