--- a/app/src/main/res/layout/fragment_video_auto_record.xml
+++ b/app/src/main/res/layout/fragment_video_auto_record.xml
@@ -26,7 +26,8 @@
         android:layout_height="@dimen/y12"
         android:background="@drawable/little_shape" />
 
-    <RelativeLayout
+
+    <com.cylan.jiafeigou.widget.SettingItemView0RadioGroup
         android:id="@+id/rl_alarm_setting_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -34,7 +35,9 @@
         <com.cylan.jiafeigou.widget.SettingItemView0
             android:id="@+id/lLayout_mode_motion"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/y72"
+            android:layout_height="wrap_content"
+            android:minHeight="@dimen/y72"
+            hunt:sv_show_radio_button="true"
             hunt:sv_sub_title="@string/RECORD_INFO_0"
             hunt:sv_title="@string/RECORD_MODE"
             hunt:sv_title_paddingEnd="@dimen/x30"
@@ -58,42 +61,49 @@
             hunt:sv_title="@string/RECORD_MODE_2"
             hunt:sv_v_divider="true" />
 
+    </com.cylan.jiafeigou.widget.SettingItemView0RadioGroup>
 
-        <RadioGroup
-            android:id="@+id/rg_auto_record_mode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_gravity="end"
-            android:layout_marginEnd="@dimen/y10"
-            android:clickable="false">
+    <!--<RelativeLayout-->
+    <!--android:id="@+id/rl_alarm_setting_container"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content">-->
 
-            <RadioButton
-                android:id="@+id/rb_motion"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/y72"
-                android:clickable="false"
-                android:focusable="false"
-                android:theme="@style/RadioButtonStyle" />
 
-            <RadioButton
-                android:id="@+id/rb_24_hours"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/y72"
-                android:layout_gravity="end"
-                android:clickable="false"
-                android:focusable="false"
-                android:theme="@style/RadioButtonStyle" />
+    <!--<RadioGroup-->
+    <!--android:id="@+id/rg_auto_record_mode"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentEnd="true"-->
+    <!--android:layout_gravity="end"-->
+    <!--android:layout_marginEnd="@dimen/y10"-->
+    <!--android:clickable="false">-->
 
-            <RadioButton
-                android:id="@+id/rb_never"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/y72"
-                android:clickable="false"
-                android:focusable="false"
-                android:theme="@style/RadioButtonStyle" />
-        </RadioGroup>
-    </RelativeLayout>
+    <!--<RadioButton-->
+    <!--android:id="@+id/rb_motion"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="@dimen/y72"-->
+    <!--android:clickable="false"-->
+    <!--android:focusable="false"-->
+    <!--android:theme="@style/RadioButtonStyle" />-->
+
+    <!--<RadioButton-->
+    <!--android:id="@+id/rb_24_hours"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="@dimen/y72"-->
+    <!--android:layout_gravity="end"-->
+    <!--android:clickable="false"-->
+    <!--android:focusable="false"-->
+    <!--android:theme="@style/RadioButtonStyle" />-->
+
+    <!--<RadioButton-->
+    <!--android:id="@+id/rb_never"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="@dimen/y72"-->
+    <!--android:clickable="false"-->
+    <!--android:focusable="false"-->
+    <!--android:theme="@style/RadioButtonStyle" />-->
+    <!--</RadioGroup>-->
+    <!--</RelativeLayout>-->
 
     <RelativeLayout
         android:id="@+id/rl_watch_video_container"
