--- a/app/src/main/res/layout/layout_dialog_capture_period.xml
+++ b/app/src/main/res/layout/layout_dialog_capture_period.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/x24"
-            android:text="重复"
+            android:text="@string/REPEAT"
             android:textColor="@color/color_black"
             android:textSize="@dimen/sp16" />
 
@@ -35,7 +35,7 @@
                 android:button="@null"
                 android:checked="false"
                 android:gravity="center"
-                android:text="@string/MON_2"
+                android:text="1"
                 android:textColor="@color/week_pick_button_color_state"
                 android:textSize="@dimen/sp15" />
 
@@ -48,7 +48,7 @@
                 android:button="@null"
                 android:checked="false"
                 android:gravity="center"
-                android:text="@string/TUE_2"
+                android:text="2"
                 android:textColor="@color/week_pick_button_color_state"
                 android:textSize="@dimen/sp15" />
 
@@ -61,7 +61,7 @@
                 android:button="@null"
                 android:checked="false"
                 android:gravity="center"
-                android:text="@string/WED_2"
+                android:text="3"
                 android:textColor="@color/week_pick_button_color_state"
                 android:textSize="@dimen/sp15" />
 
@@ -74,7 +74,7 @@
                 android:button="@null"
                 android:checked="false"
                 android:gravity="center"
-                android:text="@string/THU_2"
+                android:text="4"
                 android:textColor="@color/week_pick_button_color_state"
                 android:textSize="@dimen/sp15" />
 
@@ -87,7 +87,7 @@
                 android:button="@null"
                 android:checked="false"
                 android:gravity="center"
-                android:text="@string/FRI_2"
+                android:text="5"
                 android:textColor="@color/week_pick_button_color_state"
                 android:textSize="@dimen/sp15" />
 
@@ -100,7 +100,7 @@
                 android:button="@null"
                 android:checked="false"
                 android:gravity="center"
-                android:text="@string/SAT_2"
+                android:text="6"
                 android:textColor="@color/week_pick_button_color_state"
                 android:textSize="@dimen/sp15" />
 
@@ -113,7 +113,7 @@
                 android:button="@null"
                 android:checked="false"
                 android:gravity="center"
-                android:text="@string/SUN_2"
+                android:text="7"
                 android:textColor="@color/week_pick_button_color_state"
                 android:textSize="@dimen/sp15" />
         </LinearLayout>
