--- a/app/src/main/res/layout/activity_panorama_camera.xml
+++ b/app/src/main/res/layout/activity_panorama_camera.xml
@@ -5,7 +5,7 @@
     android:id="@+id/act_panorama_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_white">
+    android:background="#000000">
 
 
     <RelativeLayout
