--- a/app/src/main/res/layout/fragment_config_panorama_wifi_success.xml
+++ b/app/src/main/res/layout/fragment_config_panorama_wifi_success.xml
@@ -36,7 +36,7 @@
         android:enabled="true"
         android:gravity="center"
         android:maxLines="1"
-        android:text="@string/FINISHED"
+        android:text="@string/DOOR_BELL_LOOK"
         android:textColor="@color/common_btn_color_state"
         android:textSize="@dimen/sp17"
         app:lb_stroke_color="@color/color_d8d8d8" />
