--- a/app/src/main/res/layout/layout_bell_after_live_hot_seat.xml
+++ b/app/src/main/res/layout/layout_bell_after_live_hot_seat.xml
@@ -3,8 +3,8 @@
     android:id="@+id/fLayout_bell_after_live"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="@dimen/y51"
-    android:layout_marginStart="@dimen/y51"
+    android:paddingEnd="@dimen/y51"
+    android:paddingStart="@dimen/y51"
     android:visibility="visible">
 
     <ImageView
