--- a/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
+++ b/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
@@ -214,7 +214,7 @@
         </LinearLayout>
     </FrameLayout>
 
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/layout_e"
         android:layout_width="match_parent"
         android:layout_height="@dimen/y52"
@@ -332,7 +332,7 @@
             android:layout_alignParentBottom="true"
             android:layout_gravity="bottom"
             android:background="@color/color_f2f2f2" />
-    </FrameLayout>
+    </RelativeLayout>
 
 
     <FrameLayout
