--- a/app/src/main/res/layout/activity_bell_live.xml
+++ b/app/src/main/res/layout/activity_bell_live.xml
@@ -26,12 +26,12 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/y288"
         android:layout_below="@id/custom_toolbar"
-        android:background="@color/color_4b9fd5">
+        android:background="#000">
 
         <FrameLayout
             android:id="@+id/act_bell_live_video_view_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="#000">
 
             <ImageView
