--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -119,9 +119,9 @@
     <style name="home_bottom_radio_style">
         <item name="android:layout_weight">1</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_height">@dimen/y48</item>
         <item name="android:button">@null</item>
-        <item name="android:textSize">11sp</item>
+        <item name="android:textSize">@dimen/sp11</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textColor">@color/home_bottom_menu_text_color_selector</item>
     </style>
