--- a/app/src/main/res/layout/activity_panorama_album.xml
+++ b/app/src/main/res/layout/activity_panorama_album.xml
@@ -157,11 +157,10 @@
             android:id="@+id/pan_empty_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/y184"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-          >
+            app:layout_constraintTop_toBottomOf="@+id/act_panorama_album_toolbar_container">
 
             <TextView
                 android:layout_width="wrap_content"
