--- a/app/src/main/res/layout/activity_bell_live.xml
+++ b/app/src/main/res/layout/activity_bell_live.xml
@@ -72,7 +72,7 @@
             android:text="0K/s"
             android:textColor="@color/color_white"
             android:textSize="@dimen/sp13"
-            android:visibility="visible" />
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/act_bell_live_back"
