--- a/app/src/main/res/layout/activity_ap_setting.xml
+++ b/app/src/main/res/layout/activity_ap_setting.xml
@@ -16,27 +16,23 @@
         app:ct_icon="@drawable/nav_icon_back_gary"
         app:ct_title_color="@color/color_black" />
 
-    <android.support.v4.widget.Space
-        android:id="@+id/base"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/y48"
-        app:layout_constraintTop_toBottomOf="@+id/ct_tool_bar" />
 
     <TextView
         android:id="@+id/ap_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/y107"
         android:gravity="center_horizontal"
         android:text="热点"
         android:textColor="@color/color_333333"
         android:textSize="@dimen/sp26"
-        app:layout_constraintTop_toBottomOf="@+id/base" />
+        app:layout_constraintTop_toBottomOf="parent" />
 
     <EditText
         android:id="@+id/et_ap_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/y20"
+        android:layout_marginTop="@dimen/y68"
         android:background="#00000000"
         android:hint="输入"
         android:textColorHint="@color/color_666666"
@@ -50,16 +46,19 @@
         android:id="@+id/base_line_1"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_margin="@dimen/x15"
+        android:layout_marginEnd="@dimen/x20"
+        android:layout_marginStart="@dimen/x20"
+        android:layout_marginTop="@dimen/y94"
         android:background="@color/color_f2f2f2"
-        app:layout_constraintTop_toBottomOf="@+id/et_ap_name" />
+        app:layout_constraintTop_toBottomOf="@+id/ap_title" />
 
     <RelativeLayout
         android:id="@+id/tLayout_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingEnd="@dimen/x15"
-        android:paddingStart="@dimen/x15"
+        android:layout_marginTop="@dimen/y41"
+        android:paddingEnd="@dimen/x20"
+        android:paddingStart="@dimen/x20"
         app:layout_constraintTop_toBottomOf="@+id/base_line_1">
 
         <CheckBox
@@ -82,26 +81,36 @@
             android:layout_gravity="center_vertical"
             android:background="@drawable/icon_common_show_pwd_selector"
             android:button="@null"
-            android:checked="false" />
+            android:checked="true" />
 
         <EditText
             android:id="@+id/et_ap_pwd"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/y38"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:layout_gravity="center"
             android:layout_toEndOf="@+id/cb_place_holder"
             android:layout_toStartOf="@+id/cb_show_pwd"
             android:background="#00000000"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:gravity="center"
-            android:hint="输入热点密码"
+            android:hint="请输入密码"
+            android:inputType="textPassword"
+            android:maxLines="1"
+            android:paddingLeft="@dimen/x40"
+            android:paddingRight="@dimen/x40"
+            android:text="11111111"
+            android:textColor="@color/color_666666"
             android:textColorHint="@color/color_cecece"
+            android:textCursorDrawable="@drawable/bg_common_cursor"
             android:textSize="@dimen/sp15" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@+id/et_ap_pwd"
-            android:layout_marginTop="@dimen/y10"
+            android:layout_marginTop="@dimen/y11"
             android:background="@color/color_f2f2f2" />
     </RelativeLayout>
 
@@ -123,7 +132,7 @@
         android:layout_width="@dimen/x173"
         android:layout_height="@dimen/y50"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/y37"
+        android:layout_marginTop="@dimen/y38"
         android:gravity="center"
         android:maxLines="1"
         android:text="确定"
